Piccoli aggiornamenti. Sono indeciso su come avviare l'app. Secondo me deve aprire con i tre pulsantoni (primaria, scuola secondaria, varia e università) e poi aprire un popup con gli eventuali aggiornamenti.

--- a/Resources/index.html
+++ b/Resources/index.html
@@ -19,8 +19,10 @@
 		<div id="breadcrumbs"></div>
 		<div id="ricerca"></div>
 		<div id="contenuto">
-			<h1>Verifico la disponibilità <br />di eventuali aggiornamenti...</h1>
-			<a id="interrompi">interrompi verifica</a>
+			<h1>Catalogo Pearson Italia</h1>
+			<h2>Sono disponibili 6 aggiornamenti. <br />Come desideri procedere?</h2>
+			<a id="interrompi">Continua senza aggiornare</a>
+			<a id="aggiorna">Aggiorna il catalogo</a>
 		</div>
 		<div id="info"></div>
 		<div id="copyright"></div>
