Ho provato ad aggiungere un dialog per l'aggiornamento. La scelta delle scuole appare dietro e la richiesta di aggiornamento è un popup. Mi sembra che così funzioni meglio...

--- a/Resources/index.html
+++ b/Resources/index.html
@@ -20,9 +20,16 @@
 		<div id="ricerca"></div>
 		<div id="contenuto">
 			<h1>Catalogo Pearson Italia</h1>
+			<ul>
+				<li><a href="#" id="scuolaPrimaria">Scuola Pimaria</a></li>
+				<li><a href="#" id="scuolaSecondaria">Scuola Secondaria</a></li>
+				<li><a href="#" id="variaUniversità">Varia / Università</a></li>
+			</ul>
+		</div>
+		<div id="finestraAggiornamento" title="Aggiornamento catalogo">
 			<h2>Sono disponibili 6 aggiornamenti. <br />Come desideri procedere?</h2>
 			<a id="interrompi">Continua senza aggiornare</a>
-			<a id="aggiorna">Aggiorna il catalogo</a>
+			<a id="aggiorna">Aggiorna...</a>
 		</div>
 		<div id="info"></div>
 		<div id="copyright"></div>
