Creata un po' di grafica in home page

--- a/Resources/index.html
+++ b/Resources/index.html
@@ -20,18 +20,17 @@
 		<div id="ricerca"></div>
 		<div id="contenuto">
 			<h1>Catalogo Pearson Italia</h1>
-			<ul>
+			<ul id="sceltaScuola">
 				<li><a href="#" id="scuolaPrimaria">Scuola Pimaria</a></li>
 				<li><a href="#" id="scuolaSecondaria">Scuola Secondaria</a></li>
-				<li><a href="#" id="variaUniversità">Varia / Università</a></li>
+				<li><a href="#" id="variaUniversita">Varia / Università</a></li>
 			</ul>
 		</div>
 		<div id="finestraAggiornamento" title="Aggiornamento catalogo">
-			<h2>Sono disponibili 6 aggiornamenti. <br />Come desideri procedere?</h2>
+			<h2>Sono disponibili <span id="nAggiornamenti">6</span> aggiornamenti. <br />Come desideri procedere?</h2>
 			<a id="interrompi">Continua senza aggiornare</a>
 			<a id="aggiorna">Aggiorna...</a>
 		</div>
-		<div id="info"></div>
-		<div id="copyright"></div>
+		<div id="copyright">© Pearson Italia, tutti i diritti riservati - Ultimo aggiornamento: <span id="ultimoAggiornameto">27 luglio 1987</span></div>
 	</body>
 </html>
