Piccola modifica alla finestra di dialogo.

--- a/Resources/index.html
+++ b/Resources/index.html
@@ -31,6 +31,6 @@
 			<a id="interrompi">Continua senza aggiornare</a>
 			<a id="aggiorna">Aggiorna...</a>
 		</div>
-		<div id="copyright">© Pearson Italia, tutti i diritti riservati - Ultimo aggiornamento: <span id="ultimoAggiornameto">27 luglio 1987</span></div>
+		<div id="copyright">© Pearson Italia, tutti i diritti riservati - Ultimo aggiornamento: <a href="Javascript:verificaUpdate();" id="ultimoAggiornameto">27 luglio 1987</a></div>
 	</body>
 </html>
