--- a/Resources/index.html
+++ b/Resources/index.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>Pearson Italia - Catalogo test Cristiano</title>
+		<title>Pearson Italia - Catalogo - File modificato da Cristiano il 22/02/2012</title>
 
 		<link type="text/css" href="js/jquery/css/ui-lightness/jquery-ui-1.8.17.custom.css" rel="stylesheet" />	
 		<link type="text/css" href="css/catalogo.css" rel="stylesheet" />	
