--- a/Resources/index.html
+++ b/Resources/index.html
@@ -34,6 +34,6 @@
 			<a id="aggiorna">Aggiorna...</a>
 		</div>
 		</div>
-		<div id="copyright">&copy; Pearson Italia, tutti i diritti riservati - Ultimo aggiornamento: <a href="Javascript:verificaUpdate();" id="ultimoAggiornamento"></a><input type="hidden" id="recordNumber" name="recordNumber" /><input type="hidden" id="dateUpdate" name="dateUpdate" /></div>
+		<div id="copyright">&copy; Pearson Italia, tutti i diritti riservati - Ultimo aggiornamento: <a href="Javascript:chiediUpdate();" id="ultimoAggiornamento"></a><input type="hidden" id="recordNumber" name="recordNumber" /><input type="hidden" id="dateUpdate" name="dateUpdate" /></div>
 	</body>
 </html>
