Prova di tasto stampa

--- a/Resources/index.html
+++ b/Resources/index.html
@@ -12,6 +12,7 @@
 
 	</head>
 	<body>
+		<img id="stampa" onclick="Javascript:window.print();" src="img/printer.png" alt="stampa la pagina corrente" title="stampa la pagina corrente"/>
 		<div id="pageContent">
 		<div id="pearson">
 			<a href="#"><img src="img/pearson-logo.png" alt="Pearson Corporate Logo" /></a>
