CSS Saggistica, Università e professionale

--- a/Resources/index.html
+++ b/Resources/index.html
@@ -24,9 +24,9 @@
 		<div id="contenuto">
 			<h1>Catalogo Pearson Italia</h1>
 			<ul id="sceltaScuola">
-				<li><a href="Javascript:switchArea('1')" id="scuolaPrimaria">Scuola Primaria</a></li>
-				<li><a href="Javascript:switchArea('2')" id="scuolaSecondaria">Scuola Secondaria</a></li>
-				<li><a href="Javascript:switchArea('555')" id="variaUniversita">Varia / Universit&agrave;</a></li>
+				<li><a href="Javascript:switchArea('1')" id="scuolaPrimaria">Scuola<BR />Primaria</a></li>
+				<li><a href="Javascript:switchArea('2')" id="scuolaSecondaria">Scuola<BR />Secondaria</a></li>
+				<li><a href="Javascript:switchArea('555')" id="variaUniversita">Saggistica,<BR />Universit&agrave;<BR />e professionale</a></li>
 			</ul>
 		</div>
 		<div id="finestraAggiornamento" title="Aggiornamento catalogo">
