Una P di professionale maiuscola...

--- a/Resources/index.html
+++ b/Resources/index.html
@@ -26,7 +26,7 @@
 			<ul id="sceltaScuola">
 				<li><a href="Javascript:switchArea('1')" id="scuolaPrimaria">Scuola<BR />Primaria</a></li>
 				<li><a href="Javascript:switchArea('2')" id="scuolaSecondaria">Scuola<BR />Secondaria</a></li>
-				<li><a href="Javascript:switchArea('555')" id="variaUniversita">Saggistica,<BR />Universit&agrave;<BR />e professionale</a></li>
+				<li><a href="Javascript:switchArea('555')" id="variaUniversita">Saggistica,<BR />Universit&agrave;<BR />e Professionale</a></li>
 			</ul>
 		</div>
 		<div id="finestraAggiornamento" title="Aggiornamento catalogo">
