--- a/Resources/index.html
+++ b/Resources/index.html
@@ -39,6 +39,11 @@
 			<a id="interrompi_inst">Continua senza installare</a>
 			<a id="installa">Installa aggiornamento</a>
 		</div>
+		<div id="finestraNuovaApp" title="Aggiornamento applicazione">
+			<h2>&Egrave; disponibile una nuova versione dell'applicazione. <br />Come desideri procedere?</h2>
+			<a id="interrompi_na">Ignora</a>
+			<a id="scarica_na">Scarica nuova versione</a>
+		</div>
 		</div>
 		<div id="copyright">&copy; Pearson Italia, tutti i diritti riservati - Ultimo aggiornamento: <a href="Javascript:chiediUpdate();" id="ultimoAggiornamento"></a><input type="hidden" id="recordNumber" name="recordNumber" /><input type="hidden" id="dateUpdate" name="dateUpdate" /><div id="downloadInfo"><img src="img/downloader.gif" alt="Download aggiornamento in corso" title="Download aggiornamento in corso" id="downloader" />Scaricati <span id="dlsize">0</span>B</div></div>
 	</body>
