Aggiunta nota sulle adozioni DSA

--- a/Resources/index.html
+++ b/Resources/index.html
@@ -24,9 +24,9 @@
 		<div id="contenuto">
 			<h1>Catalogo Pearson Italia</h1>
 			<ul id="sceltaScuola">
-				<li><a href="Javascript:switchArea('1')" id="scuolaPrimaria">Scuola<BR />Primaria</a></li>
-				<li><a href="Javascript:switchArea('2')" id="scuolaSecondaria">Scuola<BR />Secondaria</a></li>
-				<li><a href="Javascript:switchArea('555')" id="variaUniversita">Saggistica,<BR />Universit&agrave;<BR />e Professionale</a></li>
+				<li><a href="Javascript:switchArea('1')" id="scuolaPrimaria">Scuola<br />Primaria</a></li>
+				<li><a href="Javascript:switchArea('2')" id="scuolaSecondaria">Scuola<br />Secondaria</a></li>
+				<li><a href="Javascript:switchArea('555')" id="variaUniversita">Saggistica,<br />Universit&agrave;<br />e Professionale</a></li>
 			</ul>
 		</div>
 		<div id="finestraAggiornamento" title="Aggiornamento catalogo">
@@ -43,6 +43,31 @@
 			<h2>&Egrave; disponibile una nuova versione dell'applicazione. <br />Come desideri procedere?</h2>
 			<a id="interrompi_na">Ignora</a>
 			<a id="scarica_na">Scarica nuova versione</a>
+		</div>
+		<div id="finestraAccess" title="Associazioni competenti">
+			Le richieste di libri contenuti in questo catalogo per la riproduzione a favore di studenti non vedenti, ipovedenti o con disturbi specifici di apprendimento, possono essere inoltrate alle Associazioni competenti:<br/>
+        	<br/>
+        	<strong>Biblioteca Italiana Ciechi “Regina Margherita” Onlus</strong><br/>
+			Via G. Ferrari, 5/a - 20900 Monza<br/>
+			Tel. 039/283271 - Fax 039/833264<br/>
+			Email: bic@bibciechi.it<br/>
+			<a href="#" onclick="Javascript:Titanium.Platform.openURL('http://www.bibciechi.it')">www.bibciechi.it</a><br/><br/>
+ 
+			<strong>Associazione Italiana Dislessia Aps</strong><br/>
+			Biblioteca digitale<br/>
+			Piazza dei Martiri 1/2 - 40121 Bologna<br/>
+			tel 051 6311685 - fax 051 6311685<br/>
+			Email: libroaid@dislessia oppure info@libroaid.it<br/>
+			<a href="#" onclick="Javascrpt:Titanium.Platform.openURL('http://www.libroaid.it')">www.libroaid.it</a><br/>
+			<br/> 
+			Le associazioni rendono possibile il servizio grazie a un accordo con <strong>Pearson Italia S.p.A.</strong><br/>
+			<br/>
+			L’Associazione Italiana Editori ha predisposto, anche per l’anno 2010, a uso delle istituzioni scolastiche di ogni ordine e grado, un sito (www.adozioniaie.it) per agevolare la preparazione e la relativa compilazione dell’elenco dei libri di testo adottati.
+			<br/><br/>
+			Collegandosi al sito sopracitato sarà possibile, a partire dai primi di aprile 2010, fino alla data di scadenza fissata dal Ministero:<br/>
+			<strong>1</strong>) consultare l’elenco dei titoli scolastici proposti per l’anno scolastico in corso con prezzo e codice ISBN a 13 cifre;<br/>
+			<strong>2</strong>) operare la compilazione e la trasmissione on-line delle adozioni dei libri di testo.<br/>
+			I testi sopra descritti potranno subire modifiche a seguito delle comunicazioni pervenute da parte delle associazioni. Sarà cura delle redazioni che seguono la preparazione dei cataloghi richiedere l’eventuale aggiornamento all’ufficio preposto (Segreteria Amministratore Delegato).		
 		</div>
 		</div>
 		<div id="copyright">&copy; Pearson Italia, tutti i diritti riservati - Ultimo aggiornamento: <a href="Javascript:chiediUpdate();" id="ultimoAggiornamento"></a><input type="hidden" id="recordNumber" name="recordNumber" /><input type="hidden" id="dateUpdate" name="dateUpdate" /><div id="downloadInfo"><img src="img/downloader.gif" alt="Download aggiornamento in corso" title="Download aggiornamento in corso" id="downloader" />Scaricati <span id="dlsize">0</span>B</div></div>
